# IsarMathLib

./: .gitignore  CLAUDE.md  CONTRIBUTING  Dockerfile  LICENSE  README.md
.github/workflows/: style-check.yml  verification.yml
IsarMathLib/: AbelianGroup_ZF.thy  Cardinal_ZF.thy  ChainComplex_ZF.thy  CommutativeSemigroup_ZF.thy  Complex_ZF.thy  DirectProduct_ZF.thy  DirectProduct_ZF_1.thy  Enumeration_ZF.thy  EquivClass1.thy  ExactSequence_ZF.thy  Field_ZF.thy  FinOrd_ZF.thy  FinOrd_ZF_1.thy  FinSupp_ZF.thy  Finite1.thy  FiniteSeq_ZF.thy  Finite_State_Machines_ZF.thy  Finite_ZF.thy  Finite_ZF_1.thy  Fol1.thy  Fold_ZF.thy  Generalization_ZF.thy  Group_ZF.thy  Group_ZF_1.thy  Group_ZF_1b.thy  Group_ZF_2.thy  Group_ZF_3.thy  Group_ZF_4.thy  Group_ZF_5.thy  Group_ZF_6.thy  Homology_ZF.thy  HyperNatural_ZF.thy  InductiveSeq_ZF.thy  IntDiv_ZF_1.thy  IntDiv_ZF_IML.thy  IntGroup_ZF.thy  IntModule_ZF.thy  Int_ZF_1.thy  Int_ZF_2.thy  Int_ZF_3.thy  (+90 more)
IsarMathLib/document/: root.bib  root.tex
docs/: index.html  isabelle.css
docs/IsarMathLib/: AbelianGroup_ZF.html  CONTRIBUTING.html  Cardinal_ZF.html  ChainComplex_ZF.html  CommutativeSemigroup_ZF.html  Complex_ZF.html  EquivClass1.html  (+132 more)
isar2html/: isar2html.cabal  isar2html_template.html  readme.md  theories.conf
isar2html/isarhtml/: Isar2Html.hx  imlstyle.css  index.html  isar2html.js  make.hxml
isar2html/src/: Export2Html.hs  ExportCommon.hs  IMLP_datatypes.hs  IMLParser.hs  IsarSym2Latex.hs  Main.hs  ProcessThys.hs  Utils.hs
isar2html2.0/: Dockerfile  isar2html2.0.sln  isar2html_template.html  readme.md  theories.conf
(+13 files in other folders)
